2004-07-09  Grant Taylor  <gtaylor@linuxprinting.org>

	* Imported updated foo2zjs and foo2oak data from R.R's driver.
	  It's still best to use the xml data from the driver kit, but at
	  least the website won't be so out of date now.

	* Add min12xxw driver for Minolta PagePro -W host-based lasers,
	  and some representative modern pagepros.  No exec data yet.

	* Add all known working Casio label printers (just three total)

	* Add new "pegg" driver for some Casio label printers, and a few
	  representative printers.  Still need to figure out execution
	  data, if possible.

2004-06-24  Tim Waugh <twaugh@redhat.com>

	* printer/HP-LaserJet_4300.xml: Added IEEE 1284 and SNMP
	information, gleaned from RH bug #125681.

2004-06-19  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/lm1100.xml: Added link to patch for compiling with gcc
	  3.4.

2004-06-10  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/117.xml: Fixed bug in .upp file names (Thanks to Marcelo
	  Ricardo Leitner, mrl at conectiva dot com dot br).

	* opt/218.xml: Fixed bug of "Dry Time" option of the "pcl3" only
	  valid for certain printers (Thanks to Marcelo Ricardo Leitner,
	  mrl at conectiva dot com dot br).

	* printer/Epson-EPL-6200L.xml: Fixed recommended driver (Thanks to
	  Marcelo Ricardo Leitner, mrl at conectiva dot com dot br).

	* printer/HP-DesignJet_2500CP.xml: Fixed recommended driver
	  (Thanks to Marcelo Ricardo Leitner, mrl at conectiva dot com dot
	  br).

	* driver/oce9050.xml: Fixed GhostScript command line (Thanks to
	  Marcelo Ricardo Leitner, mrl at conectiva dot com dot br).

	* driver/Postscript.xml, opt/Postscript-Resolution.xml: Added
	  HP DesignJet 2500CP.

2004-04-27  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/ppmtomd-Primer.xml, opt/ppmtomd-PrintingMethod.xml,
	  driver/ppmtomd.xml: Added new options for the driver "ppmtomd"
	  version 1.3.

	* printer/Citizen-printiva1700.xml,
	  printer/Citizen-printiva700.xml, printer/Okidata-DP_5000.xml,