@@ -9,10 +9,19 @@
 
 	This is a driver developed for the Minolta magicolor 2300 DL
 	network color laser printer.
+
+        &lt;p&gt;
 	
 	It is possible that this driver will also work for the HP LaserJet
 	1000 and other Zenographics-based printers, but the author cannot
 	test this.
+
+        &lt;p&gt;
+
+        This data is from version ?? of foo2zjs, dating from Jul 1
+        2004.  The driver includes pregenerated PPD's and proper
+        foomatic data; if in doubt use those instead of downloading
+        a PPD etc from this website.
 
     </en> </comments>
     <printers>
