@@ -1,0 +1,22 @@
+<driver id="driver/m2300w">
+    <name>m2300w</name>
+    <url>http://m2300w.sf.net/</url>
+    <execution>
+	<nopjl />
+	<filter />
+	<prototype>m2300w-wrapper %A</prototype>
+    </execution>
+    <comments><en>
+
+	This is an open source driver developed for the
+	Minolta magicolor 2300W color laser printer.
+
+        &lt;p&gt;
+
+        This data is from version 0.2 of the driver.
+	
+    </en></comments>
+    <printers>
+	<printer><id>printer/Minolta-magicolor_2300W</id></printer>
+    </printers>
+</driver>
