@@ -1,0 +1,38 @@
+<option type="enum" id="opt/m2300w-ColorMode">
+    <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+    <arg_longname> <en>Color Mode</en> </arg_longname>
+    <arg_shortname> <en>ColorMode</en> </arg_shortname>
+    <arg_execution>
+	<arg_group>General</arg_group>
+	<arg_order>120</arg_order>
+	<arg_spot>A</arg_spot>
+	<arg_required />
+	<arg_substitution />
+	<arg_proto>%s </arg_proto>
+    </arg_execution>
+    <constraints>
+	<constraint sense="true">
+	<driver>m2300w</driver>
+	<arg_defval>ev/m2300w-ColorMode-mono</arg_defval>
+	</constraint>
+    </constraints>
+    <enum_vals>
+	<enum_val id="ev/m2300w-ColorMode-mono">
+	    <ev_longname> <en>Monochrome</en> </ev_longname>
+		<comments>
+		    <en>Prints in Black and White</en>
+		</comments>
+	    <ev_shortname> <en>Monochrome</en> </ev_shortname>
+	    <ev_driverval></ev_driverval>
+	</enum_val>
+	<enum_val id="ev/m2300w-ColorMode-color">
+	    <ev_longname> <en>Color</en> </ev_longname>
+		<comments>
+		    <en>Prints in Color</en>
+		</comments>
+	    <ev_shortname> <en>Color</en> </ev_shortname>
+	    <ev_driverval>-c</ev_driverval>
+	</enum_val>
+    </enum_vals>
+</option>
