@@ -1,0 +1,58 @@
+<option type="enum" id="opt/m2300w-ColorProfile">
+    <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+    <arg_longname> <en>Color Profile</en> </arg_longname>
+    <arg_shortname> <en>ColorProfile</en> </arg_shortname>
+    <arg_execution>
+	<arg_group>General</arg_group>
+	<arg_order>130</arg_order>
+	<arg_spot>A</arg_spot>
+	<arg_required />
+	<arg_substitution />
+	<arg_proto>-C %s </arg_proto>
+    </arg_execution>
+    <constraints>
+	<constraint sense="true">
+	<driver>m2300w</driver>
+	<arg_defval>ev/m2300w-ColorProfile-GraphicAndText</arg_defval>
+	</constraint>
+    </constraints>
+    <enum_vals>
+	<enum_val id="ev/m2300w-ColorMode-PhotoOnly">
+	    <ev_longname> <en>Photo Only (no BG, no UCR, Inklimit=200 )</en> </ev_longname>
+		<comments> 
+		    <en>Prints with full Usage of Color. Black will be mixed up with Color Toner. Not usefull for Text or large Black areas.</en>
+		</comments> 
+	    <ev_shortname> <en>PhotoOnly</en> </ev_shortname>
+	    <ev_driverval>0</ev_driverval>
+	</enum_val>
+
+	<enum_val id="ev/m2300w-ColorMode-PhotoAndText">
+	    <ev_longname> <en>Photo and Text (low BG, low UCR, Inklimit=200 )</en> </ev_longname>
+		<comments> 
+		    <en>Prints without adding Color to Black. Makes sharp Text and colorfull Photos.</en>
+		</comments> 
+	    <ev_shortname> <en>PhotoAndText</en> </ev_shortname>
+	    <ev_driverval>1</ev_driverval>
+	</enum_val>
+
+	<enum_val id="ev/m2300w-ColorMode-GraphicAndText">
+	    <ev_longname> <en>Color Graphic and Text (BG, UCR, Inklimit=150 )</en> </ev_longname>
+		<comments> 
+		    <en>Best mode for every day printing. Also useable for Photos, but reduces Color from under the black Pixels. Very dark areas will printed with black only. Produces nice Gray without Color shining.</en>
+		</comments> 
+	    <ev_shortname> <en>GraphicAndText</en> </ev_shortname>
+	    <ev_driverval>2</ev_driverval>
+	</enum_val>
+
+	<enum_val id="ev/m2300w-ColorMode-LessToner">
+	    <ev_longname> <en>Less Toner (BG, UCR, Inklimit=125)</en> </ev_longname>
+		<comments> 
+		    <en>Usefull when printig a lot and want to save some Toner. The Quality is good enought for every Day Photo or Graphic printig (i.e. Flyer, Postcards, CD-Cover, etc.). Uses UnderColorReduction and Black Generation.</en>
+		</comments> 
+	    <ev_shortname> <en>LessToner</en> </ev_shortname>
+	    <ev_driverval>3</ev_driverval>
+	</enum_val>
+
+    </enum_vals>
+</option>
