@@ -1,0 +1,88 @@
+<option type="enum" id="opt/m2300w-MediaType">
+    <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+    <arg_longname> <en>Media Type</en> </arg_longname>
+    <arg_shortname> <en>MediaType</en> </arg_shortname>
+    <arg_execution>
+	<arg_group>General</arg_group>
+	<arg_order>140</arg_order>
+	<arg_spot>A</arg_spot>
+	<arg_required />
+	<arg_substitution />
+	<arg_proto>-m %s </arg_proto>
+    </arg_execution>
+    <constraints>
+	<constraint sense="true">
+	<driver>m2300w</driver>
+	<arg_defval>ev/m2300w-MediaType-Standard</arg_defval>
+	</constraint>
+    </constraints>
+    <enum_vals>
+
+	<enum_val id="ev/m2300w-MediaType-Standard">
+	    <ev_longname> <en>Standard Paper</en> </ev_longname>
+		<comments>
+		    <en>Standard (Plain paper: 60 - 90 g/qm)</en>
+		</comments>
+	    <ev_shortname> <en>Standard</en> </ev_shortname>
+	    <ev_driverval>0</ev_driverval>
+	</enum_val>
+
+	<enum_val id="ev/m2300w-MediaType-Carton">
+	    <ev_longname> <en>Carton</en> </ev_longname>
+		<comments>
+		    <en>Carton (Thick stock: 90 - 163 g/qm)</en>
+		</comments>
+	    <ev_shortname> <en>Carton</en> </ev_shortname>
+	    <ev_driverval>1</ev_driverval>
+	</enum_val>
+
+	<enum_val id="ev/m2300w-MediaType-Transparency">
+	    <ev_longname> <en>Transparency</en> </ev_longname>
+		<comments>
+		    <en>Transparency</en>
+		</comments>
+	    <ev_shortname> <en>Transparency</en> </ev_shortname>
+	    <ev_driverval>2</ev_driverval>
+	</enum_val>
+
+	<enum_val id="ev/m2300w-MediaType-Envelope">
+	    <ev_longname> <en>Envelope</en> </ev_longname>
+		<comments>
+		    <en>Envelope</en>
+		</comments>
+	    <ev_shortname> <en>Envelope</en> </ev_shortname>
+	    <ev_driverval>3</ev_driverval>
+	</enum_val>
+
+	<enum_val id="ev/m2300w-MediaType-Letterhead">
+	    <ev_longname> <en>Letterhead</en> </ev_longname>
+		<comments>
+		    <en>Letterhead</en>
+		</comments>
+	    <ev_shortname> <en>Letterhead</en> </ev_shortname>
+	    <ev_driverval>4</ev_driverval>
+	</enum_val>
+
+	<enum_val id="ev/m2300w-MediaType-Postcard">
+	    <ev_longname> <en>Postcard</en> </ev_longname>
+		<comments>
+		    <en>Postcard</en>
+		</comments>
+	    <ev_shortname> <en>Postcard</en> </ev_shortname>
+	    <ev_driverval>5</ev_driverval>
+	</enum_val>
+
+	<enum_val id="ev/m2300w-MediaType-Labels">
+	    <ev_longname> <en>Labels</en> </ev_longname>
+		<comments>
+		    <en>Labels</en>
+		</comments>
+	    <ev_shortname> <en>Labels</en> </ev_shortname>
+	    <ev_driverval>6</ev_driverval>
+	</enum_val>
+
+
+
+    </enum_vals>
+</option>
