@@ -1,0 +1,76 @@
+<option type="enum" id="opt/m2300w-PageSize">
+    <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+    <arg_longname> <en>Page Size</en> </arg_longname>
+    <arg_shortname> <en>PageSize</en> </arg_shortname>
+    <arg_execution>
+	<arg_group>General</arg_group>
+	<arg_order>150</arg_order>
+	<arg_spot>A</arg_spot>
+	<arg_required />
+	<arg_substitution />
+	<arg_proto>-p %s </arg_proto>
+    </arg_execution>
+    <constraints>
+	<constraint sense="true">
+	<driver>m2300w</driver>
+	<arg_defval>ev/m2300w-PageSize-A4</arg_defval>
+	</constraint>
+    </constraints>
+    <enum_vals>
+
+	<enum_val id="ev/m2300w-PageSize-A4">
+	    <ev_longname> <en>A4</en> </ev_longname>
+		<comments>
+		    <en>A4 ()</en>
+		</comments>
+	    <ev_shortname> <en>A4</en> </ev_shortname>
+	    <ev_driverval>4</ev_driverval>
+	</enum_val>
+
+	<!--enum_val id="ev/m2300w-PageSize-B5ijs">
+	    <ev_longname> <en>B5 IJS</en> </ev_longname>
+		<comments>
+		    <en>B5 IJS ()</en>
+		</comments>
+	    <ev_shortname> <en>B5IJS</en> </ev_shortname>
+	    <ev_driverval>6</ev_driverval>
+	</enum_val-->
+
+	<enum_val id="ev/m2300w-PageSize-A5">
+	    <ev_longname> <en>A5</en> </ev_longname>
+		<comments>
+		    <en>A5 ()</en>
+		</comments>
+	    <ev_shortname> <en>A5</en> </ev_shortname>
+	    <ev_driverval>8</ev_driverval>
+	</enum_val>
+
+	<!--enum_val id="ev/m2300w-PageSize-Folio">
+	    <ev_longname> <en>Folio</en> </ev_longname>
+		<comments>
+		    <en>Folio ()</en>
+		</comments>
+	    <ev_shortname> <en>Folio</en> </ev_shortname>
+	    <ev_driverval>18</ev_driverval>
+	</enum_val-->
+
+	<enum_val id="ev/m2300w-PageSize-Legal">
+	    <ev_longname> <en>Legal</en> </ev_longname>
+		<comments>
+		    <en>Legal ()</en>
+		</comments>
+	    <ev_shortname> <en>Legal</en> </ev_shortname>
+	    <ev_driverval>25</ev_driverval>
+	</enum_val>
+
+	<enum_val id="ev/m2300w-PageSize-Letter">
+	    <ev_longname> <en>Letter</en> </ev_longname>
+		<comments>
+		    <en>Letter ()</en>
+		</comments>
+	    <ev_shortname> <en>Letter</en> </ev_shortname>
+	    <ev_driverval>27</ev_driverval>
+	</enum_val>
+    </enum_vals>
+</option>
