@@ -1,0 +1,39 @@
+<option type="enum" id="opt/m2300w-Resolution">
+    <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+    <arg_longname> <en>Resolution</en> </arg_longname>
+    <arg_shortname> <en>Resolution</en> </arg_shortname>
+    <arg_execution>
+	<arg_group>General</arg_group>
+	<arg_order>160</arg_order>
+	<arg_spot>A</arg_spot>
+	<arg_required />
+	<arg_substitution />
+	<arg_proto>-r %s </arg_proto>
+    </arg_execution>
+    <constraints>
+	<constraint sense="true">
+	<driver>m2300w</driver>
+	<arg_defval>ev/m2300w-Resolution-1200x600</arg_defval>
+	</constraint>
+    </constraints>
+    <enum_vals>
+	<!--enum_val id="ev/m2300w-Resolution-600x600">
+	    <ev_longname> <en>600x600 dpi</en> </ev_longname>
+		<comments>
+		    <en>Resolution set to 600x600 dpi</en>
+		</comments>
+	    <ev_shortname> <en>600x600</en> </ev_shortname>
+	    <ev_driverval>1</ev_driverval>
+	</enum_val-->
+
+	<enum_val id="ev/m2300w-Resolution-1200x600">
+	    <ev_longname> <en>1200x600 dpi</en> </ev_longname>
+		<comments>
+		    <en>Resolution set to 1200x600 dpi</en>
+		</comments>
+	    <ev_shortname> <en>1200x600</en> </ev_shortname>
+	    <ev_driverval>2</ev_driverval>
+	</enum_val>
+    </enum_vals>
+</option>
