@@ -1,0 +1,48 @@
+<option type="enum" id="opt/m2300w-psnup">
+    <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+    <arg_longname> <en>Multipage</en> </arg_longname>
+    <arg_shortname> <en>Multipage</en> </arg_shortname>
+    <arg_execution>
+	<arg_group>General</arg_group>
+	<arg_order>170</arg_order>
+	<arg_spot>A</arg_spot>
+	<arg_required />
+	<arg_substitution />
+	<arg_proto> %s </arg_proto>
+    </arg_execution>
+    <constraints>
+	<constraint sense="true">
+	<driver>m2300w</driver>
+	<arg_defval>ev/m2300w-psnup-none</arg_defval>
+	</constraint>
+    </constraints>
+    <enum_vals>
+	<enum_val id="ev/m2300w-psnup-none">
+	    <ev_longname> <en>none</en> </ev_longname>
+		<comments>
+		    <en>no Multipage</en>
+		</comments>
+	    <ev_shortname> <en>none</en> </ev_shortname>
+	    <ev_driverval></ev_driverval>
+	</enum_val>
+
+	<enum_val id="ev/m2300w-psnup-2up">
+	    <ev_longname> <en>2up</en> </ev_longname>
+		<comments>
+		    <en>two pages on one sheet</en>
+		</comments>
+	    <ev_shortname> <en>2up</en> </ev_shortname>
+	    <ev_driverval>-2</ev_driverval>
+	</enum_val>
+
+	<enum_val id="ev/m2300w-psnup-4up">
+	    <ev_longname> <en>4up</en> </ev_longname>
+		<comments>
+		    <en>four pages on one sheet</en>
+		</comments>
+	    <ev_shortname> <en>4up</en> </ev_shortname>
+	    <ev_driverval>-4</ev_driverval>
+	</enum_val>
+    </enum_vals>
+</option>
