@@ -1,0 +1,63 @@
+<printer id="printer/Minolta-magicolor_2300W">
+    <make>Minolta</make>
+    <model>magicolor 2300W</model>
+    <mechanism>
+	<laser/>
+	<color/>
+	<resolution>
+	    <dpi>
+		<x>1200</x>
+		<y>600</y>
+	    </dpi>
+	</resolution>
+	<margins>
+	    <general>
+		<unit>mm</unit>
+		<top>4</top>
+		<bottom>4</bottom>
+		<left>4</left>
+		<right>4</right>
+	    </general>
+	</margins>
+	<consumables>
+	    <comments> <en>
+		Toner Black (4500 prints) - $79
+		Toner Yellow (4500 prints) - $119
+		Toner Magenta (4500 prints) - $119
+		Toner Cyan (4500 prints) - $119
+		Waste Toner Box (25000 prints) - $19
+		OPC Drum Catridge (45000 prints) - $149
+	    </en> </comments>
+	    <partno>1710517-005</partno>
+	    <partno>1710517-006</partno>
+	    <partno>1710517-007</partno>
+	    <partno>1710517-008</partno>
+	    <partno>1710522-001</partno>
+	    <partno>1710520-001</partno>
+	</consumables>
+    </mechanism>
+    <url>http://www.minolta-qms.com/products/color/mc2300DL/index.asp</url>
+    <lang>
+	<proprietary/>
+	<!--no pjl--><!--No "text"?-->
+    </lang>
+    <autodetect>
+	<parallel>
+	    <ieee1284>CLASS:PRINTER;MODEL:magicolor 2300 W;MANUFACTURER:MINOLTA-QMS;</ieee1284>
+	    <manufacturer>MINOLTA-QMS</manufacturer>
+	    <model>magicolor 2300 W</model>
+	    <commandset>GDI</commandset>
+	</parallel>
+    </autodetect>
+    <functionality>B</functionality>
+    <driver>m2300w</driver>
+    <unverified/><!--no "contrib_url"-->
+    <comments> <en>
+
+	The magicolor 2300W is a GDI color laser printer with a
+	2004 street price of $400-$600 USD. This printer is supported
+	by the m2300w open source printer driver.
+
+    </en> </comments>
+</printer>
+
