@@ -1,3 +1,12 @@
+2004-07-10  Grant Taylor  <gtaylor@linuxprinting.org>
+
+	* Add lxx74 driver and Lexmark printers for it.  No exec data, as
+	  it's a cups filter (and a pbm filter, and a gs driver, and a
+	  floor wax).
+
+	* Import representative foomatic kit from m2300w including the
+	  Minolta 2300W printer it runs.
+
 2004-07-09  Grant Taylor  <gtaylor@linuxprinting.org>
 
 	* Imported updated foo2zjs and foo2oak data from R.R's driver.
